# ecommerce-data-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
dashboard/: app.py
pipeline/: __init__.py  __main__.py  cli.py  config.py  flow.py  ingest.py  load.py  orchestrate.py  quality.py  transform.py
pipeline/sql/marts/: customer_cohort_retention.sql  daily_revenue.sql  funnel_conversion.sql  int_order_revenue.sql  top_products.sql
pipeline/sql/staging/: stg_customers.sql  stg_events.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
tests/: conftest.py  test_pipeline.py  test_quality.py  test_transforms.py
