[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "commerce-pipeline"
version = "1.0.0"
description = "An end-to-end e-commerce analytics pipeline: synthetic ingest, DuckDB warehouse, SQL marts, data-quality gates, and a Streamlit dashboard."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Laela Zorana" }]
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.30", "altair>=5.0"]
dev = ["pytest>=8.0"]

[project.scripts]
commerce-pipeline = "pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.setuptools.package-data]
pipeline = ["sql/**/*.sql"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
